# aleksandr-vin.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  CV  DEVELOPMENT.md  Gemfile  Investments.ipynb.enc  _config.yml  abn.markdown  abn_.markdown  about.markdown  cv.markdown  cv_.markdown  docker-compose.yaml  enc.markdown  h.markdown  help.markdown  how-to-add-authentication-to-aws-lambda.org  index.html  index.md  index.org  index.rst  investments.yaml.enc  jams.markdown  notes.org  pyproject.toml  sample.md  sample.org  support-auth0.markdown  v.markdown  zzp.markdown
_data/: navigation.yml
_drafts/: 2021-06-16-keeping-docs-on-github.md  2021-07-28-notes.md  2021-07-29-half-life-alyx-on-oculus-quest-2.md  2021-07-29-welcome-to-jekyll.markdown  2022-01-12-stereoscopic-360-video.md  2022-01-14-agreements-tracker.md  2022-01-21-running-on-M1-macbookpro.md  2022-01-29-12-bar-blues-weird-diagonal-matrix-with-vector.md  2022-02-14-autonomous-keyboard.md  2022-03-07-hack-week.md  2022-04-01-acronym-of-the-day.md  2022-09-13-Hackweek-OCC-in-VR copy.md  2022-09-16-Shinkendo.md  2022-11-27-motion.md  2022-11-28-hack-week.md  2022-12-26-last-week-of-the-year.md  2023-03-10-babylon.js-with-webrtc.md  2023-03-10-unity-tips.md  2023-03-14-sec-headers.md  2023-03-20-users-feedback-notes.md  2023-09-11-aggr.md  2023-09-14-state-in-da-url.md  2023-09-27-cli-whereami.md  2023-09-27-mvt-mobile-forensics.md  2023-11-15-chatgpt-ios-app.md  2023-12-12-godaddyourself.md  2023-12-29-safari-web-extension-and-auth0-login.md  2024-02-01-react-native.md  2024-03-19-someday-to-check.md  (+10 more)
(+137 files in other folders)
