[project]
name = "aleksandr-vin-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
]
